Fix mobile overflow issue

--- a/styles/StagingDisplay.module.css
+++ b/styles/StagingDisplay.module.css
@@ -19,7 +19,7 @@
 .maskBox {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(0, 1fr);
   /* grid-auto-rows: 520px; */
   grid-auto-flow: dense;
   justify-content: center;
